Ensure tabs--small width is not divisible by common screen widths

--- a/sass/_tabs.scss
+++ b/sass/_tabs.scss
@@ -4,7 +4,7 @@
 }
 
 .tabs--small > .tab {
-    width: 60px;
+    width: 70px;
 }
 
 @for $i from 1 through 5 {
